--- a/exampleSite/data/friendlinks.yml
+++ b/exampleSite/data/friendlinks.yml
@@ -1,6 +1,4 @@
-- title: BioIT爱好者
-  url: https://bioitee.com/
-  description: Bio & IT 网址导航
-- title: 维燕的知识花园
-  url: https://weiyan.cc/
-  description: 个人博客
+- title: Glory of East Asians in the UK
+  url: https://www.eastas.co.uk/
+  description: Glory of East Asians in the UK
+
