--- a/data/friendlinks.yml
+++ b/data/friendlinks.yml
@@ -4,76 +4,76 @@
 
 - title: Craftsforum
   url: https://Craftsforum.co.uk/
-  description:
+  description: Craftsforum
 
 - title: talkingcity
   url: https://talkingcity.com/
-  description:
+  description: talkingcity
 
 - title: thewholesaler
   url: https://www.thewholesaler.co.uk/
-  description:
+  description: thewholesaler
 
 - title: link777
   url: https://www.link777.co.uk/
-  description:
+  description: link777
 
 - title: therosegallery
   url: https://www.therosegallery.co.uk/
-  description:
+  description: therosegallery
 
 - title: folioart
   url: https://www.folioart.co.uk/
-  description:
+  description: folioart
 
 - title: artfinder
   url: https://www.artfinder.com/
-  description:
+  description: artfinder
 
 - title: pets4homes
   url: https://www.pets4homes.co.uk/
-  description:
+  description: pets4homes
 
 - title: gooddog
   url: https://www.gooddog.com/
-  description:
+  description: gooddog
 
 - title: louderthanwar
   url: https://louderthanwar.com/
-  description:
+  description: louderthanwar
 
 - title: channelweb
   url: https://www.channelweb.co.uk/
-  description:
+  description: channelweb
 
 - title: techworld
   url: https://www.techworld.com/
-  description:
+  description: techworld
 
 - title: pocket-lint
   url: https://www.pocket-lint.com/
-  description:
+  description: pocket-lint
 
 - title: xxbrits
   url: https://xxbrits.uk/
-  description:
+  description: xxbrits
 
 - title: honglingjin
   url: https://www.honglingjin.co.uk/
-  description:
+  description: honglingjin
 
 - title: itchpet
   url: https://www.itchpet.com/
-  description:
+  description: itchpet
 
 - title: gsequestrian
   url: https://gsequestrian.com/
-  description:
+  description: gsequestrian
 
 - title: gardenwildlife
   url: https://www.gardenwildlife.co.uk/
-  description:
+  description: gardenwildlife
 
 - title: bitiba
   url: https://www.bitiba.co.uk/
-  description:
+  description: bitiba
